cfk-cloud/cfk-cc-clink-public/cfk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cflt-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-bootstrap
                port: 
                  number: 9092
    - host: b0.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: kafka-0-internal
                port:
                  number: 9092
    - host: b1.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-1-internal
                port: 
                  number: 9092
    - host: b2.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-2-internal
                port: 
                  number: 9092
    - host: controlcenter.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port: 
                  number: 9021
    - host: schemaregistry.34.89.111.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schemaregistry-0-internal
                port: 
                  number: 8081
